# naver-mail-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: test-results.md
src/naver_mail_mcp/: __init__.py  imap_client.py  models.py  server.py  smtp_client.py
tests/: test_integration.py
